@@ -83,4 +83,5 @@
   name, and leave room for it whether the channel supports it or not.
 - Added `o` keybinding to toggle display of port options.
 - Added numeric channel level indicator, as alsamixer does (currently
-  this will only ever show the first two channels per control)
+  this will only ever show the first two channels per control).
+- Tweaked colors to be a bit closer to alsamixer.
